ingress/ingress_path.yaml
# kubectl version 1.21以降の場合のSyntax:
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /helloworld_v2
        pathType: Prefix
        backend:
          service:
            name: helloworld-v2-nodeport
            port: 
              number: 8080
